client/src/plugins/update-checks/NewVersionInfoView.less
:local(.NewVersionInfo) {
  user-select: none;

  h2 {
    font-weight: normal;
  }

  font-size: 1.2em;

  button + button {
    margin-left: 10px;
  }

  button {
    padding: 6px 10px;
  }

  .formSubmit {
    text-align: right;
    margin-top: 10px;
  }

  .releaseNotesContainer {
    margin-top: 20px;
  }

  .doNotShowContainer {
    margin-top: 20px;
  }

  .doNotShowText {
    margin-left: 2px;
  }

  .htmlSnippet {
    height: 200px;
    overflow-y: scroll;
    border: 1px solid gray;
    margin-top: 10px;
    padding: 20px;
  }

  .htmlSnippetItem {
    margin-bottom: 25px;
  }
}

